# alt-bible

./: .gitignore  .gitignore.backup  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.backup  README.md  WHY_DEEPSEEK.md  kjv_bible.json  kjv_preprocessor.py  mypy.ini  pyproject.toml  quote_generator.py  requirements.txt
.github/workflows/: ci.yml
data/: personas.json
docs/: PROJECT_OVERVIEW.md  USAGE_GUIDE.md  index.md
infrastructure/: README.md
logs/: llm_raw_output_20250615_045748.txt  llm_raw_output_20250615_045751.txt  llm_raw_output_20250615_052001.txt  llm_raw_output_joe_rogan_Genesis_1_attempt1.txt  llm_raw_output_joe_rogan_Genesis_1_attempt2.txt  llm_raw_output_samuel_l_jackson_Genesis_1_attempt1.txt
scripts/: preprocess_bible.py  test_chapter_translator.py  translate_bible.py  translate_bible_chapters.py
src/: __init__.py
src/holyremix/: __init__.py
src/holyremix/preprocessors/: __init__.py  json_preprocessor.py  text_preprocessor.py
src/holyremix/storage/: dynamodb_loader.py
src/holyremix/translators/: __init__.py  (+3 more)
src/preprocessors/: json_preprocessor.py  text_preprocessor.py
src/storage/: __init__.py  dynamodb_loader.py
src/translators/: bedrock_translator.py  chapter_translator.py  full_bible_translator.py
src/utils/: persona_loader.py  quote_generator.py  test_setup.py
tests/: debug_translation.py  test_available_models.py  test_correct_models.py  test_hardcore_translation.py  test_short_translation.py  test_simple_models.py  test_simple_prompt.py  test_strict_json_translation.py
(+5 files in other folders)
